name:                pkcs10
version:             0.3.0.0
synopsis:            PKCS#10 library
description:         Please see README.md
homepage:            https://github.com/fcomb/pkcs10-hs#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Timothy Klim <hackage@timothyklim.com>
maintainer:          Timothy Klim <hackage@timothyklim.com>
copyright:           Timothy Klim <hackage@timothyklim.com>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
extra-doc-files:     README.md
extra-source-files:  test/fixtures/dsaparams
                   , test/fixtures/dsa.pem
                   , test/fixtures/dsa1.csr
                   , test/fixtures/dsa2.csr
                   , test/fixtures/dsa3.csr
                   , test/fixtures/rsa.pem
                   , test/fixtures/rsa1.csr
                   , test/fixtures/rsa2.csr
                   , test/fixtures/rsa3.csr

library
  ghc-options:         -W
  hs-source-dirs:      src
  exposed-modules:     Data.X509.PKCS10
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 5
                     , bytestring
                     , crypton-x509
                     , crypton
                     , pem
                     , asn1-types
                     , asn1-encoding
                     , asn1-parse

test-suite             test
  ghc-options:         -W
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Keys
  build-depends:       base >= 4.3 && < 5
                     , pkcs10
                     , transformers
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck
                     , bytestring
                     , crypton
                     , pem
                     , crypton-x509
                     , asn1-types
                     , asn1-encoding
                     , asn1-parse

-- executable             example
--   ghc-options:         -W
--   default-language:    Haskell2010
--   hs-source-dirs:      example
--   main-is:             Main.hs
--   build-depends:       base >= 4.3 && < 5
--                      , pkcs10
--                      , cryptonite
--                      , x509

source-repository      head
  type:     git
  location: git://github.com/scrive/pkcs10-hs
