cabal-version:       3.0
build-type:          Simple
name:                pkcs10
version:             0.4.0.0
license:             Apache-2.0
license-file:        LICENSE
category:            Data
maintainer:          Scrive AB
author:              Timothy Klim <hackage@timothyklim.com>
copyright:           Timothy Klim <hackage@timothyklim.com>
synopsis:            PKCS#10 library
description:         Please see README.md

extra-doc-files:     README.md
extra-source-files:  test/fixtures/dsaparams
                   , test/fixtures/dsa.pem
                   , test/fixtures/dsa1.csr
                   , test/fixtures/dsa2.csr
                   , test/fixtures/dsa3.csr
                   , test/fixtures/rsa.pem
                   , test/fixtures/rsa1.csr
                   , test/fixtures/rsa2.csr
                   , test/fixtures/rsa3.csr

tested-with: GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.7, 9.8.4, 9.10.3, 9.12.2, 9.14.1 }

source-repository      head
  type:     git
  location: https://github.com/scrive/pkcs10-hs.git

library
  ghc-options:         -W
  hs-source-dirs:      src
  exposed-modules:     Data.X509.PKCS10
  default-language:    Haskell2010
  build-depends:       base >= 4.14 && < 5
                     , bytestring
                     , crypton
                     , crypton-asn1-encoding
                     , crypton-asn1-parse
                     , crypton-asn1-types
                     , crypton-pem
                     , crypton-x509 >= 1.8.0

test-suite             test
  ghc-options:         -W
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Keys
  build-depends:       base >= 4.14 && < 5
                     , QuickCheck
                     , bytestring
                     , crypton
                     , crypton-asn1-encoding
                     , crypton-asn1-types
                     , crypton-pem
                     , crypton-x509
                     , pkcs10
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck

-- executable             example
--   ghc-options:         -W
--   default-language:    Haskell2010
--   hs-source-dirs:      example
--   main-is:             Main.hs
--   build-depends:       base >= 4.3 && < 5
--                      , pkcs10
--                      , cryptonite
--                      , x509
